# openai_simple_api

./: README.md  pyproject.toml  requirements.txt
source/: config.py  incorrect_text.txt  main.py
source/actions/: QueryDataCollector.py  ShowHelp.py  ShowModels.py  ShowPredefinedPrompts.py  ShowVersion.py
source/api/: ChatGPT.py  PromptManager.py
tests/features/: chatgpt.feature  environment.py  prompts.feature
tests/features/steps/: chatgpt.py  prompts.py
